--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,12 +4,9 @@
     "moduleResolution": "Node",
     "target": "ES2020",
     "jsx": "react-jsx",
-    "checkJs": true,
+    "checkJs": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true
   },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+  "exclude": ["node_modules", "**/node_modules/*"]
 }
